--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Iuri Silva" />
-    <meta name="description" content="Página com links úteis" />
+    <meta name="author" content="Alahi Majnur Osama" />
+    <meta name="description" content="Contact Bio Link" />
     <meta
       name="keywords"
-      content="sites, web, bio, links, redes sociais, desenvolvimento, programador, iuricode, front-end, designer, ui, iuri, freelancer, freela, website"
+      content="sites, web, bio, alahimajnurosama, Alahi Majnur Osama, links, redes sociais, desenvolvimento, programador, iuricode, front-end, designer, ui, iuri, freelancer, freela, website"
     />
     <meta name="theme-color" content="#986dff" />
     <meta name="copyright" content="iuricode 2021" />
     <meta http-equiv="content-language" content="pt-br" />
     <meta
       property="og:image"
-      content="https://iuricode.vercel.app/assets/image/preview.png"
+      content="/assets/image/preview.png"
     />
-    <meta property="og:title" content="Bio // Iuri Silva" />
-    <meta property="og:description" content="Bio // Iuri Silva" />
+    <meta property="og:title" content="Alahi Majnur Osama" />
+    <meta property="og:description" content="Contact Portal of Alahi Majnur Osama " />
     <link
       rel="shortcut icon"
-      href="assets/image/logo-page.svg"
+      href="/assets/image/logo-page.svg"
       type="image/x-icon"
     />
     <link rel="canonical" href="https://www.iuricode.com/bio/" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Bio // Iuri Silva</title>
+    <title>Bio // Alahi Majnur Osama</title>
   </head>
 
   <body>
@@ -42,13 +42,15 @@
         width="125px"
         height="125px"
       />
-      <h1>Iuri Silva</h1>
-      <p>@iuricode</p>
+      <h1>Alahi Majnur Osama</h1>
+      <p>Team Urban</p>
     </header>
 
     <main>
       <section>
-        <h2>Pessoais</h2>
+
+        <!--
+        <h2>Personal</h2>
         <div>
           <a href="https://iuricode.com/efront/" rel="noopener" target="_blank">
             <article
@@ -120,10 +122,15 @@
               />
               <h2>Setup</h2>
             </article>
+        -->
+
+
+
+        
           </a>
         </div>
 
-        <h2>Redes sociais</h2>
+        <h2>Social Icons</h2>
 
         <div>
           <a
@@ -145,7 +152,7 @@
             >
               <img
                 src="assets/icons/instagram.svg"
-                alt="ícone instagram"
+                alt="ícon instagram"
                 width="28px"
                 height="28px"
               />
